# rust-tutorial

./: .gitignore  LICENSE  Readme.md  keyboard_shortcuts.md
cli/src/: config.rs  main.rs  search.rs  simple.rs  utils.rs
collections/src/: hashmap.rs  main.rs  string.rs  vector.rs
common_concepts/src/: main.rs
enums/src/: coin.rs  dice.rs  if_let.rs  ip_addr.rs  main.rs  optional.rs
errors/src/: errors.rs  main.rs
functional/src/: closures.rs  examples.rs  iterator.rs  main.rs  motivation.rs  rectangle.rs  shirt_inventory.rs  shoe.rs  utils.rs
generics/src/: main.rs  point.rs  utils.rs
guessing_game/src/: main.rs
lifetimes/src/: main.rs
modules/restaurant/src/: lib.rs
modules/restaurant/src/back_house/: back_office.rs  kitchen.rs  mod.rs
modules/restaurant/src/front_house/: hosting.rs  serving.rs
modules/src/: main.rs
modules/src/garden/: flowers.rs  mod.rs
my_crate/: Cargo.toml
my_crate/add/add_one/src/: lib.rs
my_crate/art/src/: lib.rs  main.rs
my_crate/src/: lib.rs
ownership/src/: main.rs
smart_pointers/src/: box_type.rs  csp.rs  main.rs  mem_leak.rs  msg.rs  my_box.rs  rc_type.rs  ref_cell_type.rs  tree.rs
structs/src/: main.rs
testing/src/: lib.rs  test.rs
traits/src/: aggregator.rs  main.rs  pair.rs  types.rs
