[package]
name = "my_crate"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

# Take a look at LTO & PGO optimization at Rust-Academy.com
# https://rust-academy.com/rust-lto-and-pgo/
